--- a/recipe.yaml
+++ b/recipe.yaml
@@ -1,4 +1,4 @@
-version: v0.0.6
+version: v0.0.7
 name: dev
 author: Lenix
 description: for dev use
@@ -6,11 +6,7 @@ $minFxVersion: 17000
 $onesync: on
 
 variables:
-  # deploymentID: 59
-  dbHost: localhost
-  dbUsername: root
-  dbPassword: ""
-  dbName: database
+  deploymentID: 59
 
 tasks: 
     - action: connect_database
