--- a/server.cfg
+++ b/server.cfg
@@ -12,6 +12,7 @@ sv_maxclients 10
 set resources_useSystemChat true
 
 ensure tr_lib
+ensure [qbx_core]
 
 ## Add system admins
 add_ace group.admin command allow # allow all commands
