--- a/server.cfg
+++ b/server.cfg
@@ -12,7 +12,10 @@ sv_maxclients 10
 set resources_useSystemChat true
 
 ensure tr_lib
-ensure [qbx_core]
+ensure [qbx_core]/[mandatories]
+ensure [qbx_core]/qbx_core
+ensure [qbx_core]/[dependencies]
+
 
 ## Add system admins
 add_ace group.admin command allow # allow all commands
