fix(config): correct and update configuration files
- Change ox_lib.cfg logger settings from ox:logger to set commands
- Remove deprecated mysql_connection_string from oxmysql.cfg
- Update txadmin.cfg to enable debug mode and set server name to "txAdmin"
- Enable hiding admin in punishments and adjust other txadmin.cfg options
- Add mysql_connection_string to server.cfg with the correct placeholder
- Ensure ox_target and ox_inventory resources are loaded before qbx_core in server.cfg

--- a/config/ox_lib.cfg
+++ b/config/ox_lib.cfg
@@ -12,8 +12,8 @@ add_ace resource.ox_lib command.remove_principal allow
 setr ox:locale "en"
 set ox:txAdminNotifications 0
 setr ox:printlevel "info"
-ox:logger "datadog"
-ox:logger:hostname "fxserver"
+set ox:logger "datadog"
+set ox:logger:hostname "fxserver"
 set fivemanage:key ""
 set fivemanage:dataset ""
 set datadog:key ""
