--- a/config/txadmin.cfg
+++ b/config/txadmin.cfg
@@ -1,16 +1,15 @@
-set monitorMode false
-setr txAdminServerMode false
-set gamename "gta5"
+# set txAdmin-luaComHost "invalid"
+# set txAdmin-luaComToken "invalid"
+# set monitorMode false
+# setr txAdminServerMode false
 setr txAdmin-menuEnabled false
-setr txAdmin-debugMode false
+setr txAdmin-debugMode true
+set txAdmin-serverName "txAdmin"
+set gamename "gta5"
 set txAdmin-version 0.0.0
 set txAdmin-locale "en"
 set txAdmin-menuAnnounceNotiPos "top-center"
-set version "invalid"
-set txAdmin-luaComHost "invalid"
-set txAdmin-luaComToken "invalid"
-set txAdmin-serverName "txAdmin"
-set txAdmin-hideAdminInPunishments false
+set txAdmin-hideAdminInPunishments true
 set txAdmin-hideAdminInMessages false
 set txAdmin-hideDefaultAnnouncement false
 set txAdmin-hideDefaultDirectMessage false
@@ -22,5 +21,4 @@ set txAdmin-menuDrunkDuration 30
 set txAdmin-playerModePtfx true
 set txAdmin-menuAlignRight false
 set txAdmin-menuPageKey "Tab"
-set txAdmin-playerModePtfx
 set sv_enableNetEventReassembly true
