--- a/server.cfg
+++ b/server.cfg
@@ -8,6 +8,7 @@ sv_enforceGameBuild 3570
 sv_licenseKey "{{svLicense}}"
 sv_maxclients 10
 {{serverEndpoints}}
+set mysql_connection_string "{{dbConnectionString}}"
 set resources_useSystemChat true
 
 exec config/oxmysql.cfg
@@ -21,7 +22,8 @@ exec config/txadmin.cfg
 
 ensure tr_lib
 ensure chat
-ensure [mandatories]
+ensure ox_target
+ensure ox_inventory
 ensure qbx_core
 ensure [dependencies]
 
